# create_gnome_app

./: Cargo.toml  TODO.md
licenses/: agpl_3_short  apache_2_short  gpl_2_short  gpl_3_short  lgpl_2_1_short  lgpl_3_short  mit_x11_short  mpl_2_short
src/: engine.rs  formatters.rs  generator.rs  licenses.rs  main.rs  project_config.rs  template_reader.rs  template_writer.rs
templates/: README.md
templates/c/: meson.build
templates/c/build-aux/: {{appId}}.json
templates/c/data/: {{appId}}.gschema.xml
templates/c/data/icons/: meson.build
templates/c/po/: POTFILES
templates/c/src/: main.c  meson.build  {{dashCase projectName}}-application.c  {{dashCase projectName}}-application.h  {{dashCase projectName}}-window.c  {{dashCase projectName}}-window.h  {{dashCase projectName}}.gresource.xml
templates/js/: meson.build
templates/js/build-aux/: {{appId}}.json
templates/js/po/: POTFILES  meson.build
templates/js/src/: main.js  meson.build  window.blp  window.js  {{appId}}.data.gresource.xml  {{appId}}.src.gresource.xml
templates/python/: .gitignore  meson.build  requirements.dev.txt
templates/python/data/: meson.build
templates/python/{{snakeCase projectName}}/: main.py  meson.build  window.py  {{dashCase projectName}}.gresource.xml  {{dashCase projectName}}.in.py
templates/typescript/: .gitignore  package-lock.json  package.json
templates/typescript/build-aux/: {{appId}}.json
templates/typescript/po/: POTFILES
templates/typescript/src/: main.ts  meson.build  window.ts  {{appId}}.src.gresource.xml  {{dashCase projectName}}.gresource.xml
templates/vala/: .gitignore  meson.build
templates/vala/build-aux/: {{appId}}.json
templates/vala/data/: {{appId}}.desktop.in  {{appId}}.metainfo.xml.in
templates/vala/po/: POTFILES
templates/vala/src/: application.vala  main.vala  meson.build  window.vala
