[package]
name = "create_gnome_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bundle_templates = []

[dependencies]
clap = "3.2.23"
str_inflector = "0.12.0"
inquire = "0.7.2"
include_dir = "0.7.3"
chrono = "0.4.35"
glib = "0.19.3"
